# Th_of_Parallel

./: README.md
Task_1/CMake/: CMakeLists.txt  README.md  Source.c
Task_1/Make/: Makefile  README.md  Source.c
